--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,18 +2,32 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+        <link rel="shortcut icon" href="{{ asset('images/logo.png') }}" />
+        <title>{% block title %} {% endblock %}</title>
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
+        <link href="{{ asset('css/style.css') }}" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        {% block stylesheets %} {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% set page = app.request.get('_route') %}
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{{ path('home_page') }}">Movie App</a>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link {% if page == 'home_page' %} active {% endif %}" href="{{ path('home_page') }}">Menu</a>
+                        <a class="nav-link {% if page == 'add_movie' %} active {% endif %}" href="{{ path('add_movie') }}">Ajouter un film</a>
+                        <a class="nav-link {% if page == 'import_csv' %} active {% endif %}" href="{{ path('import_csv') }}">Importer</a>
+                        <a class="nav-link {% if page == 'export_csv' %} active {% endif %}" href="{{ path('export_csv') }}">Exporter</a>
+                        <a class="nav-link {% if page == 'statistics' %} active {% endif %}" href="{{ path('statistics') }}">Statistiques</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        
+        <div class="p-5">
+            {% block body %} {% endblock %}
+        </div>
     </body>
 </html>
