--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link rel="shortcut icon" href="{{ asset('images/logo.png') }}" />
         <title>{% block title %} {% endblock %}</title>
-
+        
         <link href="{{ asset('css/style.css') }}" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         {% block stylesheets %} {% endblock %}
@@ -17,7 +17,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link {% if page == 'home_page' %} active {% endif %}" href="{{ path('home_page') }}">Menu</a>
-                        <a class="nav-link {% if page == 'add_movie' %} active {% endif %}" href="{{ path('add_movie') }}">Ajouter un film</a>
+                        <a class="nav-link {% if page == 'add_movie' %} active {% endif %}" href="{{ path('add_movie') }}">Voter</a>
                         <a class="nav-link {% if page == 'import_csv' %} active {% endif %}" href="{{ path('import_csv') }}">Importer</a>
                         <a class="nav-link {% if page == 'export_csv' %} active {% endif %}" href="{{ path('export_csv') }}">Exporter</a>
                         <a class="nav-link {% if page == 'statistics' %} active {% endif %}" href="{{ path('statistics') }}">Statistiques</a>
